fixed wrapping for  10/11

--- a/style.css
+++ b/style.css
@@ -64,6 +64,12 @@ h2 {
         margin-right: 8px;
         margin-left: 8px;
     }
+
+    .card {
+        font-size: 5vw;
+        width: 60px;
+        height: 80px;
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -95,6 +101,12 @@ h2 {
     #menu a {
         margin-right: 16px;
         margin-left: 16px;
+    }
+
+    .card {
+        font-size: 50px;
+        width: 80px;
+        height: 80px;
     }
 }
 
@@ -144,18 +156,17 @@ h2 {
 .card {
     font-family: 'Noto Sans JP', sans-serif;
     font-weight: 700;
-    font-size: 50px;
     text-align: center;
     line-height: 55px;
 
-    width: 55px;
-    height: 80px;
+    
     display: inline-block;
     background-color: #fff;
     border: none;
 
     padding: 10px;
     margin: 2px;
+    white-space: nowrap;
 }
 
 .card.ignore-elements {
